@@ -150,7 +150,7 @@ data:extend({
     close_sound = sounds.metal_large_close,
     working_sound = working_sound,
     fluid_boxes = fluid_boxes,
-    fluid_boxes_off_when_no_fluid_recipe = true,
+    fluid_boxes_off_when_no_fluid_recipe = false,
 
     smoke = {
       {
